# imago

./: LICENSE  README.md  package-lock.json  package.json  project_development_plan.md
.github/workflows/: publish.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dirs.rs  image_processor.rs  lib.rs  main.rs
src/store/: useAppStore.ts
