[package]
name = "imago"
version = "0.1.1"
description = "A free, offline, and open-source image processing utility"
authors = ["Jaydeep Vejapara"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "imago_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25.10", features = ["webp", "avif"] }
kamadak-exif = "0.6.1"
rayon = "1.12.0"
imageproc = "0.27.0"
tokio = { version = "1", features = ["full"] }
dirs = "6.0"
ab_glyph = "0.2"



